# aio-pydispatch

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: main.yaml
src/aio_pydispatch/: __init__.py  signal.py  signal_manager.py  utils.py
tests/: conftest.py  test_signal.py  test_signal_manager.py
