[metadata]
name = aio_pydispatch
version = attr: aio_pydispatch.__version__
author = huagang517
author_email = huagang517@126.com
url = https://github.com/whg517/aio-pydispatch.git
description = asyncio pydipatch (Signal Manager)
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
packages = find:
package_dir = = src
include_package_data = True
python_requires = >= 3.6
install_requires =
    pydispatcher

[options.packages.find]
where = src
exclude =
    tests*
    docs


[flake8]
max-line-length = 120
exclude =
    .git,
    .tox,
    build,
    dist,
    docs,
    htmlcov,


[tool:pytest]
testpaths = tests
python_files = tests.py test_*.py *_tests.py

[coverage:report]
show_missing = True
omit =
    */.tox/*
    */site-packages/*
    */distutils/*
    tests/*
