[metadata]
name = aio_pydispatch
version = attr: aio_pydispatch.__version__
author = huagang517
author_email = huagang517@126.com
url = https://github.com/whg517/aio-pydispatch.git
description = asyncio pydipatch (Signal Manager)
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
packages = find:
package_dir = = src
include_package_data = True
python_requires = >= 3.9

[options.packages.find]
where = src
exclude =
    tests*
    docs
